antes de cambiar estilos hacia grids.

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -11,13 +11,20 @@
      <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
      <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
      <div id="message">Tambox 1.0</div>
-     <div id="msg1">
+     <!-- <div id="msg1">
        Bloqueado
-     </div>
-     <div class="btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div>
+     </div> -->
+     <div class="ec_btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div>
   </div>
    <div class="grupo4">
-     <div><a class="btn btn-primary m-4" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
-     <div><a class="btn btn-primary m-4" id="socket_to_tbm">send socket to TBM</a> </div>
+     <!-- <div class="ec_panel "> -->
+       <div class="ec_card resumen ">
+         <p>Historial</p>
+       </div>
+     <!-- </div> -->
+
+     <div><a class="ec_btn" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
+     <div><a class="ec_btn" id="socket_to_tbm">send socket to TBM</a> </div>
+
    </div>
  </div>
