--- a/src/system/cifras_generales/cifras_generales.html
+++ b/src/system/cifras_generales/cifras_generales.html
@@ -11,7 +11,7 @@
 <body oncontextmenu="return false">
   <div class="wrapper">
     <div class="titulo">
-      <div class="btn volver" id='config'><i class="fas fa-long-arrow-alt-left fa-1x"></i></div>
+      <div class="ec_btn volver" id='config'><i class="fas fa-long-arrow-alt-left fa-1x"></i></div>
       <div>Cifras Generales</div>
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
@@ -49,7 +49,7 @@
         <tr>
           <td></td>
           <td width="30%">
-            <div class="btn volver" id='main'>OK</div>
+            <div class="ec_btn volver" id='main'>OK</div>
           </td>
           <td></td>
         </tr>
