--- a/src/system/cuadre_diario/cuadre_diario.html
+++ b/src/system/cuadre_diario/cuadre_diario.html
@@ -35,7 +35,7 @@
 <body oncontextmenu="return false">
   <div class="wrapper">
     <div class="titulo">
-      <div class="btn volver" id='config'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
+      <div class="ec_btn volver" id='config'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
       <div>Cuadre Diario</div>
       <!-- <div class="btn volver" id='soporte'>Soporte</div> -->
     </div>
@@ -73,7 +73,7 @@
         <tr>
           <td></td>
           <td width="30%">
-            <div class="btn volver" id='main'>OK</div>
+            <div class="ec_btn volver" id='main'>OK</div>
           </td>
           <td></td>
         </tr>
