--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -5,21 +5,21 @@
 </script>
   <div class="wrapper2">
     <div class="titulo2">
-      <div class="btn" id='main'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
+      <div class="ec_btn" id='main'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
       <div class="">
 
       </div>
       <div>Configuración</div>
-      <div id="msg1">
+      <!-- <div id="msg1">
         Bloqueado
-      </div>
+      </div> -->
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
 
     <div class="grupo4">
-      <div class="btn btn_grupo4" id='cuadre_diario'><i class="far fa-clipboard fa-4x"></i> Cuadre diario</div>
-      <div class="btn btn_grupo4" id='cifras_generales'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
-      <div class="btn btn_grupo4" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
-      <div class="btn btn_grupo4" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
+      <div class="ec_btn btn_grupo4" id='cuadre_diario'><i class="far fa-clipboard fa-4x"></i> Cuadre diario</div>
+      <div class="ec_btn btn_grupo4" id='cifras_generales'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
+      <div class="ec_btn btn_grupo4" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
+      <div class="ec_btn btn_grupo4" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
     </div>
   </div>
