grandes, cambios, aqui se reestructuro todo de desde el arraque para detectar si hay bolsa o no, y continuar con el proceso de login

--- a/src/nueva_remesa_paso_2.html
+++ b/src/nueva_remesa_paso_2.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
 $(document).ready(function() {
-  $("#terminar_remesa").click(function() {
-    socket.emit("terminar_remesa",'terminar_remesa');
-  });
+  // $("#terminar_remesa").click(function() {
+  //   socket.emit("terminar_remesa",'terminar_remesa');
+  // });
 
   // $("#cancelar_remesa").click(function() {
   //   socket.emit("cancelar_remesa",'cancelar_remesa');
