--- a/src/system/remesa_hermes/rm_1.html
+++ b/src/system/remesa_hermes/rm_1.html
@@ -36,7 +36,7 @@
     <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
     <div class="mensaje">Remesa Hermes</div>
     <div id="msg1">
-      Bloqueado
+      <!-- Bloqueado -->
     </div>
     <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
