--- a/src/system/remesa_hermes/rm_4.html
+++ b/src/system/remesa_hermes/rm_4.html
@@ -1,12 +1,12 @@
 <script type="text/javascript">
   $(document).ready(function() {
 ///////////////////////////////////////////////////////
-  socket.on('Cashbox_out_of_Service', function(msg){
-      console.log("Cashbox_out_of_Service");
-        display_message("Note_Transfered_to_Stacker");
-      //socket.emit("rm_4","rm_4");
-    //  mandar_orden("rm_4");
-  })
+  // socket.on('Cashbox_out_of_Service', function(msg){
+  //     console.log("Cashbox_out_of_Service");
+  //       display_message("Note_Transfered_to_Stacker");
+  //     //socket.emit("rm_4","rm_4");
+  //   //  mandar_orden("rm_4");
+  // })
 });
 </script>
 <body  oncontextmenu="return false">
