--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -79,7 +79,7 @@ console.log(mydata["historial"]);
      </div>
      <div class="ec_card panel1">
        <div><a class="ec_btn" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
-       <div><a class="ec_btn" id="read_new_tebs">read_new_tebs</a> </div>
+       <!-- <div><a class="ec_btn" id="read_new_tebs">read_new_tebs</a> </div> -->
 
     </div>
      <div class="ec_card panel2">
