--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -31,9 +31,9 @@ console.log(mydata["historial"]);
     var monto_formateado=addCommas(value["monto"]);
     console.log( index + ": " + value["tebs_barcode"] + " con monto de :S/"+ value["monto"]+ " con fecha de :"+ value["fecha"]+ " con hora de :"+ value["hora"]);
   if (value["status"]=="iniciada") {
-    $(".lista_remesas_hermes").append("<div class='ec_panel_tarjeta_historial_remesa_hermes_verde'><div class='label_tebs'>TebsBarcode:</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_fecha_cierre'>fecha cierre</div><div class='fecha_cierre'>"+value["fecha_fin"]+" / "+value["hora_fin"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div>");
+    $(".lista_remesas_hermes").append("<div class='ec_panel_tarjeta_historial_remesa_hermes_verde'><div class='label_tebs'>TebsBarcode:</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_fecha_cierre'>fecha cierre</div><div class='fecha_cierre'>"+value["fecha_fin"]+" / "+value["hora_fin"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div><div class='label_no_billetes'>no_billetes:</div><div class='no_billetes'>"+value["no_billetes"]+"</div>");
   }else {
-    $(".lista_remesas_hermes").append("<div class='ec_panel_tarjeta_historial_remesa_hermes_roja'><div class='label_tebs'>TebsBarcode:</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_fecha_cierre'>fecha cierre</div><div class='fecha_cierre'>"+value["fecha_fin"]+" / "+value["hora_fin"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div>");
+    $(".lista_remesas_hermes").append("<div class='ec_panel_tarjeta_historial_remesa_hermes_roja'><div class='label_tebs'>TebsBarcode:</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_fecha_cierre'>fecha cierre</div><div class='fecha_cierre'>"+value["fecha_fin"]+" / "+value["hora_fin"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div><div class='label_no_billetes'>no_billetes:</div><div class='no_billetes'>"+value["no_billetes"]+"</div>");
 
       }
 //  ");
@@ -42,20 +42,21 @@ console.log(mydata["historial"]);
   $.each(mydata["remesas_from_this_tebsbarcode"], function( index, value ) {
     var monto_formateado=addCommas(value["monto"]);
     console.log( index + ": " + value["tebs_barcode"] + " con monto de :S/"+ value["monto"]+ " con fecha de :"+ value["fecha"]+ " con hora de :"+ value["hora"]);
-    if (value["status"]=="terminado") {
-      console.log("detectando remesa terminada");
-      if(value["tipo"]=="ingreso"){
-        $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_verde'><div class='label_tipo'>Tipo:</div><div class='tipo'>"+value["tipo"]+"</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+"</div><div class='label_hora_creacion'>Hora creado</div><div class='hora_creacion'>"+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div>");
-      }else {
-        $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_azul'><div class='label_tipo'>Tipo:</div><div class='tipo'>"+value["tipo"]+"</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_cierre'>"+value["fecha"]+"</div><div class='label_hora_cierre'>Hora creacion</div><div class='hora_cierre'>"+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div>");
+      if (value["status"]=="terminado"&value["tipo"]=="ingreso") {
+        console.log("detectando remesa terminada");
+
+        $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_verde'><div class='label_no_remesa'># Remesa:</div><div class='no_remesa'>"+value["no_remesa"]+"</div><div class='label_tipo'>Tipo:</div><div class='tipo'>"+value["tipo"]+"</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div><div class='label_no_billetes'>no_billetes:</div><div class='no_billetes'>"+value["no_billetes"]+"</div>");
+     }
+    if (value["status"]=="completado"&value["tipo"]=="egreso") {
+      $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_azul'><div class='label_no_remesa'># Remesa:</div><div class='no_remesa'>"+value["no_remesa"]+"</div><div class='label_tipo'>Tipo:</div><div class='tipo'>"+value["tipo"]+"</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div><div class='label_no_billetes'>no_billetes:</div><div class='no_billetes'>"+value["no_billetes"]+"</div>");
+       }
+
+      if(value["status"]!="terminado"&value["tipo"]=="ingreso"){
+          $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_roja'><div class='label_no_remesa'># Remesa:</div><div class='no_remesa'>"+value["no_remesa"]+"</div><div class='label_tipo'>Tipo:</div><div class='tipo'>"+value["tipo"]+"</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div><div class='label_no_billetes'>no_billetes:</div><div class='no_billetes'>"+value["no_billetes"]+"</div>");
       }
-    }else {
-          $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_roja'><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+"</div><div class='label_hora_creacion'>Hora creacion</div><div class='hora_creacion'>"+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div>");
-    }
-
-
-//  ");
   });
+
+
 });
  </script>
 
@@ -76,7 +77,7 @@ console.log(mydata["historial"]);
    <div class="area_trabajo ec_panel">
 
      <div class="ec_card2 resumen">
-             <p>Historial remesas hermes</p>
+             <p>Remesas Hermes</p>
              <div class="lista_remesas_hermes"></div>
               <p>fin de la lista</p>
      </div>
@@ -87,10 +88,12 @@ console.log(mydata["historial"]);
     </div>
      <div class="ec_card panel2">
        <div><a class="ec_btn" id="socket_to_tbm">send socket to TBM</a> </div>
+       <div><a class="ec_btn" id="synch_remesas">synch Remesas</a> </div>
+
      </div>
 
      <div class="ec_card2 resumen2">
-             <p>Historial remesas </p>
+             <p>Remesas</p>
              <div class="lista_remesas"></div>
               <p>fin de la lista</p>
      </div>
@@ -99,7 +102,7 @@ console.log(mydata["historial"]);
      <p>IP Publico:</p> <div id="public_machine_ip">puclic_machine_ip</div>
     </div> -->
    </div>
-   <div class="pie_de_pagina titulo2" id="mesage2">pie_de_pagina</div>
+   <div class="pie_de_pagina" id="mesage2">Creado por EC-HOME AUTOMATION PERU.</div>
 
 
      <!-- <div class="ec_btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div></div>
