punto seguro antes de cambios, corrigiendo la cuenta de billetes en los egresos.

--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -17,6 +17,7 @@
     </div>
 
     <div class="grupo4">
+      <div class="ec_btn btn_grupo4" id='reciclador'><i class="far fa-clipboard fa-4x"></i> Reciclador</div>
       <div class="ec_btn btn_grupo4" id='cuadre_diario'><i class="far fa-clipboard fa-4x"></i> Cuadre diario</div>
       <div class="ec_btn btn_grupo4" id='cifras_generales'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
       <div class="ec_btn btn_grupo4" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
