--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -86,11 +86,11 @@ console.log(mydata["historial"]);
        <!-- <div><a class="ec_btn" id="read_new_tebs">read_new_tebs</a> </div> -->
 
     </div>
-     <div class="ec_card panel2">
+     <!-- <div class="ec_card panel2">
        <div><a class="ec_btn" id="socket_to_tbm">send socket to TBM</a> </div>
        <div><a class="ec_btn" id="synch_remesas">synch Remesas</a> </div>
 
-     </div>
+     </div> -->
 
      <div class="ec_card2 resumen2">
              <p>Remesas</p>
