--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -60,7 +60,6 @@ console.log(mydata["historial"]);
       }
 //  ");
   });
-
   $.each(mydata["remesas_from_this_tebsbarcode"], function( index, value ) {
     var monto_formateado=addCommas(value["monto"]);
     console.log( index + ": " + value["tebs_barcode"] + " con monto de :S/"+ value["monto"]+ " con fecha de :"+ value["fecha"]+ " con hora de :"+ value["hora"]);
@@ -77,8 +76,6 @@ console.log(mydata["historial"]);
           $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_roja'><div class='label_no_remesa'># Remesa:</div><div class='no_remesa'>"+value["no_remesa"]+"</div><div class='label_tipo'>Tipo:</div><div class='tipo'>"+value["tipo"]+"</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>"+value["tebs_barcode"]+"</div><div class='label_status'>Status</div><div class='status'>"+value["status"]+"</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>"+value["fecha"]+" / "+value["hora"]+"</div><div class='label_moneda'>"+value["moneda"]+"</div><div class='label_monto'>"+monto_formateado+"</div><div class='label_no_billetes'>no_billetes:</div><div class='no_billetes'>"+value["no_billetes"]+"</div>");
       }
   });
-
-
 });
  </script>
 
@@ -140,7 +137,7 @@ console.log(mydata["historial"]);
    <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
    <div id="message">Tambox 1.0</div>
    <div class=""></div>
-   <div class="ec_btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div>
+   <div class="ec_btn volver" id='security_page'><i class="far fa-list-alt fa-2x"></i></div>
    </div>
    <div class="area_trabajo_logo ec_panel">
      <div class="logo">
@@ -183,7 +180,6 @@ console.log(mydata["historial"]);
    <div class="grupo4"> -->
      <!-- <div class="ec_panel "> -->
        <!--  -->
-
 
      <!-- -->
 </div>
