remesa hermes completo, usando remesa manual.

--- a/src/system/info/info.html
+++ b/src/system/info/info.html
@@ -64,6 +64,9 @@ $(".ec_btn").click(function(){
       // $( "#lock_cashbox" ).show();
         pinta_color_en_boton();
   });
+  // socket.on('Cashbox_Back_in_Service', function(msg) {
+  // clearTimeout(mytimer);
+  // });
 
 });
 
