--- a/src/system/remesa_hermes/rm_1.html
+++ b/src/system/remesa_hermes/rm_1.html
@@ -8,6 +8,14 @@
     $('#valor_fecha_creacion').text(mydata[0].fecha);
   //  $('#dias_acumulados').text(mydata.no_billetes);
     $('#monto_en_bolsa_valor').text(mydata[0].monto);
+    $('#status').text(mydata[0].status);
+    $('#monto').text(mydata[0].monto);
+    $('#no_billetes').text(mydata[0].no_billetes);
+    $('#ts_inicio').text(mydata[0].ts_inicio);
+
+
+
+
   //  $('#monto_reciclador_valor').text(mydata.monto_en_reciclador);
 
     // console.log("logeando desde la pagina de remesa:"+mydata.nombre);
@@ -47,16 +55,16 @@
 
 <div class="lista_remesas_hermes">
   <div class="ec_panel_tarjeta_historial_remesa_hermes_verde">
-    <div class="label_tebs">TebsBarcode:</div><div class="numero_de_tebs">1144431</div>
-    <div class="label_status">Status</div><div class="status">iniciada</div>
+    <div class="label_tebs">TebsBarcode:</div><div class="tebsbarcode_valor" id="tebsbarcode_valor"></div>
+    <div class="label_status">Status</div><div class="status" id="status"></div>
     <div class="label_fecha_creacion">fecha creacion</div>
-    <div class="fecha_creacion">2021-2-25 / 16:25:5</div>
+    <div class="fecha_creacion" id="ts_inicio"></div>
     <div class="label_fecha_cierre">fecha cierre</div>
     <div class="fecha_cierre">null / null</div>
     <div class="label_moneda">PEN</div>
-    <div class="label_monto">250</div>
-    <div class="label_no_billetes">#billetes</div>
-    <div class="no_billetes">10</div>
+    <div class="label_monto" id="monto"></div>
+    <div class="label_no_billetes"># billetes</div>
+    <div class="no_billetes" id="no_billetes">10</div>
 
   </div>
 </div>
