--- a/src/system/reciclador/reciclador.html
+++ b/src/system/reciclador/reciclador.html
@@ -132,7 +132,7 @@ var myChart = new Chart(ctx, {
     </div>
     <!-- <div class="grupo4"> -->
       <div class="info_template">
-        <div class="chart" style="position: relative; height:40vh; width:60vw">
+        <div class="chart" id="grafico_chart">
           <section>  <canvas id="myChart" width="100%" height="80%"></canvas> </section>
         </div>
         <!-- <div class="grupo_full_width"> -->
