subiendo todo de desktop

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -6,6 +6,7 @@
     });
 ///////////////////////////////////////////////////////
 //if (mydata["this_machine_info"][0].machine_name == "Autogenerada") {
+// console.log((mydata["this_machine_info"][0].is_locked);
 if (mydata["this_machine_info"][0].is_locked == true) {
 
   //alert ("machine needs Adoption");
@@ -152,7 +153,7 @@ console.log("ESto es historial"+JSON.stringify(mydata["historial"]));
      <div class="pie_de_pagina">Creado por EC-HOME AUTOMATION PERU.</div>
 </div>
 
-<div class="popup" style="display:none">
+<div class="popup" style="display:flex">
   <div id="overlay-back"></div>
   <div id="overlay">
     <div class="grupo3">
